--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Scania Test</string>
+
+    <string-array name="language_option">
+        <item>en - English</item>
+        <item>cs - Czech</item>
+        <item>de - German</item>
+        <item>es - Spanish</item>
+        <item>fr - French</item>
+        <item>pt - Portuguese</item>
+    </string-array>
+
 </resources>
