--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Scania Test</string>
+    <string name="app_name">Jokes App</string>
 
     <string-array name="language_option">
         <item>en - English</item>
@@ -9,5 +9,7 @@
         <item>fr - French</item>
         <item>pt - Portuguese</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
